apps/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  strategy:
    # jellyfin freaks out if multiple processes access its config dir at once
    # by using Recreate, old pods are terminated before new pods are deployed
    type: Recreate
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - image: linuxserver/jellyfin:latest
          imagePullPolicy: Always
          name: jellyfin
          resources:
            requests:
              # request small amount of CPU to prevent latency when node is under load from other work
              cpu: 100m
            limits:
              # VAAPI device for HW acceleration, requires intel-device-plugins-for-kubernetes
              gpu.intel.com/i915: 1
          volumeMounts:
            - name: jellyfin-config
              mountPath: /config
            - name: jellyfin-array
              mountPath: /movies
              subPath: Videos/Movies
              readOnly: True
            - name: jellyfin-array
              mountPath: /music
              subPath: Music
              readOnly: True
            - name: jellyfin-array
              mountPath: /tvshows
              subPath: Videos/Shows
              readOnly: True
            - name: jellyfin-transcode
              mountPath: /transcode
      volumes:
        - name: jellyfin-config
          hostPath:
            path: /home/hubbe/services/jellyfin
        - name: jellyfin-array
          persistentVolumeClaim:
            claimName: array
        - name: jellyfin-transcode
          emptyDir: {}
