apps/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    traefik.ingress.kubernetes.io/router.middlewares: traefik-https-redirect@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls.options: traefik-tls@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
      - video.hubbe.club
      secretName: jellyfin-cert
  rules:
    - host: video.hubbe.club
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
